# TerminalRSSReader

./: pyproject.toml  test.pyi
prisma/: schema.prisma
terminalrssreader/: app.py
